angular dropdown hack included to fix visibility issues.

--- a/src/main/webapp/resources/assets/css/angular-dropdowns-custom.css
+++ b/src/main/webapp/resources/assets/css/angular-dropdowns-custom.css
@@ -72,7 +72,7 @@ ul.dropdown li {
     border: 1px solid #f35bd6;
     font-weight: normal;
     list-style: none;
-    visibility: hidden;
+    display: none;
     max-height: 300px;
     overflow-y: auto; /*Provide an auto overflow to display scroll*/
     color: #FFFFFF;
@@ -149,7 +149,7 @@ ul.dropdown li {
 }
 
 .wrap-dd-select.active .dropdown {
-    visibility: visible;
+    display: block;
 }
 
 /****** dropdown-menu *******/
